# stonemaze

./: .gitignore  README.md  ans.txt  main.py
phase1/: main.py
phase2/: analysis.ipynb  challenge.cpp  check.py  chessboard.cpp  countlines.py  phase2.md  pyproject.toml  showhidden.py  solvehidden  solvehidden.cpp
phase2/hidden/: showhidden.py  solvehidden.cpp  solvehidden.py
phase2/input/: phase1input2.txt
phase2/lifesolver/: Makefile  board.cpp  board.h  gen0.py  get_input.py  lidi.cpp  lidi.h  main.cpp  output.txt  poc  poc.cpp  simulation.cpp  simulation.h  utils.cpp  utils.h
phase2/smsim/: __init__.py  board.py
phase2/solutions/: output1.txt  output2.txt  output3.txt  output5.txt
phase2/solutions/challenge1/: utils.h
phase2/solutions/challenge2/: main.cpp  simulation.cpp
phase2/solutions/challenge3/: Makefile  board.cpp  get_input.py
phase2/solutions/challenge4/: simulation.h  utils.cpp
