[tool.poetry]
name = "phase2"
version = "0.1.0"
description = ""
authors = ["Dikson Santos <dikson@mindsight.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
loguru = "^0.6.0"
matplotlib = "^3.7.1"
pyseagull = "^1.0.0b4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
